@@ -2,8 +2,37 @@
 lazy val root = (project in file(".")).
   settings(
     inThisBuild(List(
-      organization := "com.example",
+      organization := "$organization$",
       scalaVersion := "2.11.8"
     )),
-    name := "My Template Project"
+    name := "$name$",
+    version := "0.0.1",
+    sparkVersion := "$sparkVersion$",
+    javacOptions ++= Seq("-source", "1.8", "-target", "1.8"),
+    sparkComponents := Seq("core", "sql", "catalyst", "mllib"),
+    parallelExecution in Test := false,
+    fork := true,
+    coverageHighlighting := true,
+    javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled"),
+    libraryDependencies ++= Seq(
+      // Test your code PLEASE!!!
+      "org.scalatest" %% "scalatest" % "3.0.1" % "test",
+      "org.scalacheck" %% "scalacheck" % "1.13.4" % "test",
+      "com.holdenkarau" %% "spark-testing-base" % "$sparkVersion$_$sparkTestingbaseRelease$" % "test"),
+    scalacOptions ++= Seq("-deprecation", "-unchecked"),
+    pomIncludeRepository := { x => false },
+    resolvers ++= Seq(
+      "sonatype-releases" at "https://oss.sonatype.org/content/repositories/releases/",
+      "Typesafe repository" at "http://repo.typesafe.com/typesafe/releases/",
+      "Second Typesafe repo" at "http://repo.typesafe.com/typesafe/maven-releases/",
+      Resolver.sonatypeRepo("public")
+    ),
+    // publish settings
+    publishTo := {
+      val nexus = "https://oss.sonatype.org/"
+      if (isSnapshot.value)
+        Some("snapshots" at nexus + "content/repositories/snapshots")
+      else
+        Some("releases"  at nexus + "service/local/staging/deploy/maven2")
+    }
   )
